# Snake-Game

./: CMakeLists.txt  README.MD  SnakeGame_ClassDiagram.puml  UML Diagram.puml  board.cpp  board.h  emptycelltracker.cpp  emptycelltracker.h  enums.cpp  enums.h  food.cpp  food.h  gamecontroller.cpp  gamecontroller.h  gamewidget.cpp  gamewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingmenu.cpp  settingmenu.h  settingmenu.ui  snake.cpp  snake.h  start.cpp  start.h  start.ui
.qtcreator/: CMakeLists.txt.user.9581d37
